# Streamlit-Parser

./: .dockerignore  Dockerfile  app.py  docker-compose.yml  log_parser.py  pyproject.toml  regex.json  regex_patterns.json  requirements.txt
code/: parse.py
exported-assets/: README.md  apache_access.csv  custom_app.csv  demo.py  nginx_access.csv  script.py  script_1.py  script_2.py  script_4.py  script_5.py  script_6.py  syslog.csv  usage_example.py
logs/: script_3.py
oplogs/: example_parsed.csv
