[project]
name = "mlpro"
version = "0.1.0"
description = "ML Project"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "pathlib2 (>=2.3.7.post1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
